--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/nbproject/private/
+.DS_Store
+nbproject/private/private.properties
+nbproject/private/private.properties
