--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\ellig\\AppData\\Roaming\\NetBeans\\28\\build.properties
+user.properties.file=/Users/nikecederlid/Library/Application Support/NetBeans/28/build.properties
