--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ replay_pid*
 .DS_Store
 nbproject/private/private.properties
 nbproject/private/private.properties
+nbproject/build-impl.xml
+nbproject/build-impl.xml
+nbproject/build-impl.xml
+nbproject/build-impl.xml
+nbproject/project.xml
+/nbproject
