--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ nbproject/project.xml
 /nbproject
 /SDGSweden/nbproject/private/
 /SDGSweden/build/
+/SDGSweden01/build/
+/SDGSweden01/nbproject/private/
+/02_DGSweden/build/
+/02_DGSweden/nbproject/private/
