--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SDGSweden
-main.class=Main
+main.class=sdgsweden.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
