--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SDGSweden
+application.vendor=Probook
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/SDGSweden.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SDGSweden
+endorsed.classpath=
 excludes=
 file.reference.InfDB.jar=../MySQL_Resurser/InfDB.jar
 file.reference.mysql-connector-java-8.0.23.jar=../MySQL_Resurser/mysql-connector-java-8.0.23.jar
