--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -36,12 +36,16 @@ dist.jlink.output=${dist.jlink.dir}/SDGSweden
 endorsed.classpath=
 excludes=
 file.reference.InfDB.jar=../MySQL_Resurser/InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\InfDB.jar
 file.reference.mysql-connector-java-8.0.23.jar=../MySQL_Resurser/mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.InfDB.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,6 +71,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\javadoc_InfDB.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
