Revert "tagit bort alla mina JFrame-klasser, även mainklassen."
This reverts commit 10c3369f7cb4cff19ae007752bdb6d1b0fdb7621.

--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -82,7 +82,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SDGSweden
-main.class=sdgsweden.TestKlassUtifr\u00e5nVideos
+main.class=sdgsweden.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
