--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -37,15 +37,19 @@ endorsed.classpath=
 excludes=
 file.reference.InfDB.jar=../MySQL_Resurser/InfDB.jar
 file.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\InfDB.jar
+file.reference.InfDB.jar-2=..\\databasfiler\\InfDB.jar
 file.reference.mysql-connector-java-8.0.23.jar=../MySQL_Resurser/mysql-connector-java-8.0.23.jar
 file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-2=..\\databasfiler\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar}:\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${file.reference.InfDB.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
+    ${file.reference.InfDB.jar-2}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
