--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -35,17 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SDGSweden
 endorsed.classpath=
 excludes=
-file.reference.InfDB.jar=../MySQL_Resurser/InfDB.jar
-file.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\InfDB.jar
-file.reference.mysql-connector-java-8.0.23.jar=../MySQL_Resurser/mysql-connector-java-8.0.23.jar
-file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\mysql-connector-java-8.0.23.jar
+file.reference.InfDB.jar=..\\..\\..\\..\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\InfDB.jar
+file.reference.mysql-connector-java-8.0.23.jar=..\\..\\..\\..\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.InfDB.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
+    ${file.reference.mysql-connector-java-8.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +67,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\javadoc_InfDB.zip!/javadoc/
+javadoc.reference.InfDB.jar=../../../../Downloads/projektT1/MySQL_Resurser/MySQL_Resurser/javadoc_InfDB\\javadoc\\
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -82,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SDGSweden
-main.class=sdgsweden.TestKlassUtifr\u00e5nVideos
+main.class=sdgsweden.Start
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
