SQL uppkoppling fixad 100% nu

--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -76,6 +76,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.InfDB.jar-1=C:\\Users\\winte\\Downloads\\projektT1\\MySQL_Resurser\\MySQL_Resurser\\javadoc_InfDB.zip!/javadoc/
+javadoc.reference.InfDB.jar-2=../databasfiler/javadoc_InfDB.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
