--- a/02_DGSweden/nbproject/project.properties
+++ b/02_DGSweden/nbproject/project.properties
@@ -55,7 +55,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.InfDB.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
+    ${file.reference.mysql-connector-java-8.0.23.jar-1}:\
+    ${file.reference.InfDB.jar-2}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-2}
     ${file.reference.mysql-connector-java-8.0.23.jar}
 =======
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
